azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "variables": {},
    "resources": [
      {
          "name": "WebServerNSG",
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2018-08-01",
          "location": "[resourceGroup().location]",
          "properties": {
              "securityRules": [
                  {
                      "name": "RDP",
                      "properties": {
                          "description": "description",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "3389",
                          "sourceAddressPrefix": "4.2.2.3/32",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 100,
                          "direction": "Inbound"
                      }
                  },
                  {
                      "name": "Http",
                      "properties": {
                          "description": "description",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "80",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 101,
                          "direction": "Inbound"
                      }
                  }                  
              ]
          }
      }
    ],
    "outputs": {},
    "functions": []
}
